k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plumber-on-k8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: plumber-on-k8s
  template:
    metadata:
      labels:
        app: plumber-on-k8s
    spec:
      imagePullSecrets:
      - name: regcred
      nodeSelector:
        tier: backend
      containers:
      - name: plumber-on-k8s
        image: giovannisalvatore/plumber-on-k8s:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 20
          failureThreshold: 3
          successThreshold: 1 # Must be 1 for liveness and startup Probes.
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 3
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          failureThreshold: 10
          periodSeconds: 30
          successThreshold: 1 # Must be 1 for liveness and startup Probes.
        resources:
          limits:
            cpu: 600m
            memory: 512Mi
          requests:
            cpu: 300m
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /home/plumber/data
      volumes:
      - name: data
        hostPath:
          path: /files
